force-app/main/default/objects/Hardware__c/fields/Storage_TB__c.field-meta.xml
<CustomField>
    <fullName>Storage_TB__c</fullName>
    <label>Storage TB</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>