force-app/main/default/objects/Hardware__c/fields/Support_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Number__c</fullName>
    <label>Support Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>