force-app/main/default/objects/Hardware__c/fields/Support_Contract__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Hardware</relationshipLabel>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>