force-app/main/default/objects/Hardware__c/fields/Users_Per_Partition__c.field-meta.xml
<CustomField>
    <fullName>Users_Per_Partition__c</fullName>
    <description>Number of users per partition for tier-based pricing calculations. Used by Hardware Attribute Pricing prehook to determine user tier multipliers.</description>
    <label>Users Per Partition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>