force-app/main/default/objects/Hardware__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor 1</fullName>
            </value>
            <value>
                <fullName>Vendor 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>