force-app/main/default/objects/Hardware__c/validationRules/VR_Hardware_Account_Match_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Hardware_Account_Match_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Parent_Hardware__c)),
  Account__c != Parent_Hardware__r.Account__c
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Hardware must belong to same Account as parent</errorMessage>
</ValidationRule>