force-app/main/default/objects/Hardware__c/validationRules/VR_Hardware_Serial_Required_When_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Hardware_Serial_Required_When_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Active&quot;),
  ISBLANK(Serial_Number__c)
)</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Serial Number is required for Active hardware</errorMessage>
</ValidationRule>