force-app/main/default/objects/Hardware__c/validationRules/VR_Hardware_Warranty_Date_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Hardware_Warranty_Date_Logic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Warranty_End_Date__c)),
  NOT(ISBLANK(Warranty_Start_Date__c)),
  Warranty_End_Date__c &lt; Warranty_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Warranty_End_Date__c</errorDisplayField>
    <errorMessage>Warranty End Date must be after Warranty Start Date</errorMessage>
</ValidationRule>