force-app/main/default/objects/Hardware__c/validationRules/VR_Virtual_Hardware_No_Physical.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Virtual_Hardware_No_Physical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Is_Virtual__c = TRUE,
  OR(
    NOT(ISBLANK(Serial_Number__c)),
    NOT(ISBLANK(MAC_Address__c))
  )
)</errorConditionFormula>
    <errorMessage>Virtual hardware cannot have Serial Number or MAC Address</errorMessage>
</ValidationRule>