force-app/main/default/objects/Hardware__c/listViews/Active_Hardware.listView-meta.xml
<ListView>
    <fullName>Active_Hardware</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Hardware_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Hardware</label>
</ListView>