force-app/main/default/objects/Hardware__c/listViews/All_Hardware.listView-meta.xml
<ListView>
    <fullName>All_Hardware</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Hardware</label>
</ListView>