force-app/main/default/objects/Hardware__c/listViews/Pending_Hardware.listView-meta.xml
<ListView>
    <fullName>Pending_Hardware</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Hardware_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Hardware</label>
</ListView>