force-app/main/default/objects/Hardware__c/listViews/Tech_MFT_Hardware.listView-meta.xml
<ListView>
    <fullName>Tech_MFT_Hardware</fullName>
    <filterScope>Queue</filterScope>
    <label>Tech MFT</label>
    <queue>Tech_MFT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>